# dbt-pipeline-template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  README.md  dbt_project.yml  pyproject.toml
models/marts/: _marts_models.yml  fct_permeability.sql
models/staging/: _sources.yml  _stg_models.yml  stg_flow.sql  stg_pressure.sql
seeds/: _seeds.yml  experiment_material_fluid_flowrate_01.csv  experiment_material_fluid_pressure_01.csv
tests/: assert_flow_rate_inlet_is_positive.sql
