[project]
name = "dbt-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.8",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.5.1",
    "sqlfluff>=4.1.0",
    "sqlfluff-templater-dbt>=4.1.0",
]
